--- a/_publications/ICIP2018.md
+++ b/_publications/ICIP2018.md
@@ -12,5 +12,4 @@ title: 'AAM : An Assessment Metric of Axial Chromatic Aberration'
 image: aam.jpg
 ---
 
-
-
+Knowledge of lens specifications is important to identify the best lens for a given capture scenario and application. Lens manufacturers provide many specifications in their data sheets, and multiple initiatives for testing and comparing different lenses can be found online. However, due to the lack of a suitable metric or technique, no evaluation of axial chromatic aberration is available. In this paper, we propose a metric, Axial Aberration Magnitude or AAM, that assesses the degree of axial chromatic aberration of a given lens. Our metric is generalizable to multispectral acquisition systems and is very simple and cheap to compute. We present the entire procedure and algorithm for computing the AAM metric, and evaluate it for two spectral systems and two consumer lenses.
