--- a/_publications/ICIP2018.md
+++ b/_publications/ICIP2018.md
@@ -8,6 +8,7 @@ ref-authors:
 ref-journal: IEEE International Conference on Image Processing (ICIP)
 ref-link: https://doi.org/10.1109/ICIP.2018.8451377
 ref-year: 2018
+ref-code: https://github.com/majedelhelou/AAM_ICIP18
 title: 'AAM : An Assessment Metric of Axial Chromatic Aberration'
 image: aam.jpg
 ---
