--- a/_data/mendeley-export.bib
+++ b/_data/mendeley-export.bib
@@ -3,8 +3,7 @@
   shorttitle = {{{ICIP}}},
   booktitle = {{{IEEE International Conference}} on {{Image Processing}} ({{ICIP}})},
   author = {El Helou, Majed and D{\"u}mbgen, Frederike and S{\"u}sstrunk, Sabine},
-  year = {2018},
-  doi = {10.1109/ICIP.2018.8451377}
+  year = {2018}
 }
 
 @inproceedings{al2,
@@ -22,7 +21,7 @@
   author = {Barfoot, Timothy D and Holmes, Connor and D{\"u}mbgen, Frederike},
   year = {2024},
   journal = {International Journal of Robotics Research},
-  doi = {10.1177/02783649241269337}
+  note = {\url{https://doi.org/10.1177/02783649241269337}}
 }
 
 @inproceedings{chen_what_2023,
@@ -42,18 +41,6 @@
   journal = {Workshop on Algorithmic Foundations for Robotics}
 }
 
-@article{dumbgen_globally_2024,
-  title = {Toward {{Globally Optimal State Estimation Using Automatically Tightened Semidefinite Relaxations}}},
-  shorttitle = {T-{{RO}}},
-  author = {D{\"u}mbgen, Frederike and Holmes, Connor and Agro, Ben and Barfoot, Timothy D.},
-  year = {2024},
-  journal = {IEEE Transactions on Robotics},
-  volume = {40},
-  pages = {4338--4358},
-  doi = {10.1109/TRO.2024.3454570},
-  note = {\url{http://arxiv.org/abs/2308.05783}}
-}
-
 @inproceedings{dumbgen_realizability_2020,
   title = {Realizability of {{Planar Point Embeddings}} from {{Angle Measurements}}},
   shorttitle = {{{ICASSP}}},
@@ -62,7 +49,6 @@
   year = {2020},
   volume = {2020-May},
   pages = {5710--5714},
-  doi = {10.1109/ICASSP40776.2020.9053903},
   note = {\url{https://infoscience.epfl.ch/record/274650?ln=en}}
 }
 
@@ -75,8 +61,18 @@
   volume = {8},
   number = {2},
   pages = {1117--1124},
-  doi = {10.1109/LRA.2022.3233232},
   note = {\url{https://doi.org/10.1109/LRA.2022.3233232}}
+}
+
+@article{dumbgen_toward_2024,
+  title = {Toward {{Globally Optimal State Estimation Using Automatically Tightened Semidefinite Relaxations}}},
+  shorttitle = {T-{{RO}}},
+  author = {D{\"u}mbgen, Frederike and Holmes, Connor and Agro, Ben and Barfoot, Timothy D.},
+  year = {2024},
+  journal = {IEEE Transactions on Robotics},
+  volume = {40},
+  pages = {4338--4358},
+  note = {\url{http://arxiv.org/abs/2308.05783}}
 }
 
 @inproceedings{ei,
@@ -85,8 +81,7 @@
   booktitle = {{{IS}} and {{T International Symposium}} on {{Electronic Imaging Science}} and {{Technology}}},
   author = {D{\"u}mbgen, Frederike and El Helou, Majed and Gucevska, Natalija and S{\"u}sstrunk, Sabine},
   year = {2018},
-  pages = {3211--3215},
-  doi = {10.2352/ISSN.2470-1173.2018.16.COLOR-321}
+  pages = {3211--3215}
 }
 
 @article{fineline,
@@ -115,7 +110,6 @@
   month = oct,
   number = {arXiv:2410.12345},
   publisher = {arXiv},
-  doi = {10.48550/arXiv.2410.12345},
   howpublished = {\url{http://arxiv.org/abs/2410.12345}}
 }
 
@@ -128,18 +122,16 @@
   volume = {9},
   number = {3},
   pages = {2160--2167},
-  doi = {10.1109/LRA.2024.3354623},
   note = {\url{https://ieeexplore.ieee.org/document/10400824}}
 }
 
-@article{guo_datadriven_2024,
+@article{guo_data-driven_2024,
   title = {Data-{{Driven Batch Localization}} and {{SLAM Using Koopman Linearization}}},
   shorttitle = {T-{{RO}}},
   author = {Guo, Zi Cong and D{\"u}mbgen, Frederike and Forbes, James R. and Barfoot, Timothy D.},
   year = {2024},
   journal = {IEEE Transactions on Robotics},
   pages = {3964--3983},
-  doi = {10.1109/TRO.2024.3443674},
   note = {\url{http://arxiv.org/abs/2309.04375}}
 }
 
@@ -149,19 +141,17 @@
   author = {Holmes, Connor and D{\"u}mbgen, Frederike and Barfoot, Timothy D.},
   year = {2024},
   journal = {arXiv:2405.19309},
-  doi = {10.48550/arXiv.2405.19309},
   note = {\url{http://arxiv.org/abs/2405.19309}}
 }
 
 @article{holmes_semidefinite_2024,
   title = {On {{Semidefinite Relaxations}} for {{Matrix-Weighted State-Estimation Problems}} in {{Robotics}}},
-  shorttitle = {{{arXiv}}},
+  shorttitle = {T-{{RO}}},
   author = {Holmes, Connor and D{\"u}mbgen, Frederike and Barfoot, Timothy D.},
   year = {2024},
   journal = {IEEE Transactions on Robotics},
   volume = {40},
   pages = {4805--4824},
-  doi = {10.1109/TRO.2024.3475220},
   note = {\url{https://doi.org/10.1109/TRO.2024.3475220}}
 }
 
@@ -172,8 +162,7 @@
   author = {Baechler, Gilles and D{\"u}mbgen, Frederike and Elhami, Golnoosh and Krekovic, Miranda and Scheibler, Robin and Scholefield, Adam and Vetterli, Martin},
   year = {2018},
   volume = {2018-April},
-  pages = {3484--3488},
-  doi = {10.1109/ICASSP.2018.8462441}
+  pages = {3484--3488}
 }
 
 @inproceedings{icip_2021,
@@ -182,8 +171,7 @@
   booktitle = {{{IEEE International Conference}} on {{Image Processing}} ({{ICIP}})},
   author = {D{\"u}mbgen, Frederike and Schroers, Christopher and Mitchell, Kenny},
   year = {2019},
-  pages = {744--748},
-  doi = {10.1109/ICIP.2019.8804269}
+  pages = {744--748}
 }
 
 @inproceedings{ipin,
@@ -191,8 +179,7 @@
   shorttitle = {{{IPIN}}},
   booktitle = {International {{Conference}} on {{Indoor Positioning}} and {{Indoor Navigation}} ({{IPIN}})},
   author = {D{\"u}mbgen, Frederike and Oeschger, Cynthia and Kolundzija, Mihailo and Scholefield, Adam and Girardin, Emmanuel and Leuenberger, Johan and Ayer, Serge},
-  year = {2019},
-  doi = {10.1109/IPIN.2019.8911765}
+  year = {2019}
 }
 
 @patent{patent,
@@ -212,8 +199,7 @@
   journal = {IEEE Robotics and Automation Letters},
   volume = {8},
   number = {3},
-  pages = {1271--1278},
-  doi = {10.1109/LRA.2022.3194669}
+  pages = {1271--1278}
 }
 
 @article{siam,
@@ -224,8 +210,7 @@
   journal = {SIAM Journal on Matrix Analysis and Applications},
   volume = {41},
   number = {1},
-  pages = {332--363},
-  doi = {10.1137/18m123428x}
+  pages = {332--363}
 }
 
 @article{starloc,
@@ -233,8 +218,7 @@
   shorttitle = {{{arXiv}}},
   author = {D{\"u}mbgen, Frederike and Shalaby, Mohammed A. and Holmes, Connor and Cossette, Charles C. and Forbes, James R. and Ny, Jerome Le and Barfoot, Timothy D.},
   year = {2023},
-  journal = {arXiv:2309.05518 [cs.RO]},
-  doi = {10.48550/arXiv.2309.05518}
+  journal = {arXiv:2309.05518 [cs.RO]}
 }
 
 @misc{talbot_continuoustime_2024,
@@ -245,7 +229,6 @@
   month = nov,
   number = {arXiv:2411.03951},
   publisher = {arXiv},
-  doi = {10.48550/arXiv.2411.03951},
   howpublished = {\url{http://arxiv.org/abs/2411.03951}}
 }
 
