--- a/_data/mendeley-export.bib
+++ b/_data/mendeley-export.bib
@@ -135,12 +135,12 @@
   note = {\url{http://arxiv.org/abs/2309.04375}}
 }
 
-@article{holmes_sdprlayers_2024,
+@article{holmes_sdprlayers_2025,
   title = {{{SDPRLayers}}: {{Certifiable Backpropagation Through Polynomial Optimization Problems}} in {{Robotics}}},
   shorttitle = {{{arXiv}}},
   author = {Holmes, Connor and D{\"u}mbgen, Frederike and Barfoot, Timothy D.},
-  year = {2024},
-  journal = {arXiv:2405.19309},
+  year = {2025},
+  journal = {IEEE Transactions on Robotics (to appear)},
   note = {\url{http://arxiv.org/abs/2405.19309}}
 }
 
