--- a/_data/mendeley-export.bib
+++ b/_data/mendeley-export.bib
@@ -221,15 +221,13 @@
   journal = {arXiv:2309.05518 [cs.RO]}
 }
 
-@misc{talbot_continuoustime_2024,
+@article{talbot_continuous-time_2025,
   title = {Continuous-{{Time State Estimation Methods}} in {{Robotics}}: {{A Survey}}},
   shorttitle = {Continuous-{{Time State Estimation Methods}} in {{Robotics}}},
   author = {Talbot, William and Nubert, Julian and Tuna, Turcan and Cadena, Cesar and D{\"u}mbgen, Frederike and Tordesillas, Jesus and Barfoot, Timothy D. and Hutter, Marco},
-  year = {2024},
-  month = nov,
-  number = {arXiv:2411.03951},
-  publisher = {arXiv},
-  howpublished = {\url{http://arxiv.org/abs/2411.03951}}
+  year = {2025},
+  journal = {IEEE Transactions on Robotics},
+  note = {\url{http://arxiv.org/abs/2411.03951}}
 }
 
 @phdthesis{thesis,
