--- a/_data/blogposts-export.bib
+++ b/_data/blogposts-export.bib
@@ -1,3 +1,14 @@
+@article{dumbgen_toward_2024,
+  title = {Toward {{Globally Optimal State Estimation Using Automatically Tightened Semidefinite Relaxations}}},
+  shorttitle = {T-{{RO}}},
+  author = {D{\"u}mbgen, Frederike and Holmes, Connor and Agro, Ben and Barfoot, Timothy D.},
+  year = {2024},
+  journal = {IEEE Transactions on Robotics},
+  volume = {40},
+  pages = {4338--4358},
+  note = {\url{http://arxiv.org/abs/2308.05783}}
+}
+
 @article{parrilo_semidefinite_2003,
   title = {Semidefinite Programming Relaxations for Semialgebraic Problems},
   author = {Parrilo, Pablo A.},
