--- a/_posts/2025-08-18-blog-posts-in-2025.md
+++ b/_posts/2025-08-18-blog-posts-in-2025.md
@@ -5,9 +5,9 @@ date: 2025-08-18
 categories: [misc]
 ---
 
-_I created this blogpost when writing [this other post](/research/2025/08/18/kernel-image-primal-dual.html) but I might keep reiterating as I refine my methodology._
+_I created this blogpost when writing [this other post](/research/2025/08/18/kernel-image-primal-dual.html) and the follow-up post [here](/research/2025/08/24/kipd-minimization.html)._
 
-This is a recipe for how I am writing blogposts, with a little help from LLMs (Gemini, in my case). By sharing how I am using this tool I hope to either tell you something that you might find helpful, or to hear from you how I could improve my pipeline.
+This is a recipe for how I am writing blogposts, with a little help from LLMs (Gemini, in my case). By sharing how I am using this tool I hope to either tell you something that you might find helpful, or to hear from you about how I could improve my pipeline.
 
 ## First step: hand-write notes
 
@@ -92,6 +92,30 @@ As it turns out, Gemini did not see an important mistake in my original dual pro
 I have written a blogpost that had a mistake. It was based on a handwritten note. I have now fixed the handwritten note -- see the attached Pdf. Can you adjust the blogpost accordingly? The blogpost is also attached. The mistake was that the dual problem was always feasible, ie, it attained the value zero. This is of course wrong -- when the primal is infeasible the dual should also be able to take value infinity. I forgot that I had to use the theorem of strong alternatives when dealing with these feasibility problems.
 ```
 I attached my new [notes](/assets/pdfs/KernelImagePrimalDual_v2.pdf) and the blogpost source file. The output was pretty usable after a few minor edits. 
+
+## Follow-up blogpost
+
+I came back to the original blogpost a week later because I needed an evolution of the material described. In particular, I wanted to see what happens to these four formulations when you add a cost, ie, when you are actually minimizing a polynomial. I started with some handwritten notes but I realized that it soon became an almost purely mechanic exercise of reformulating the problems. 
+
+So instead, I turned directly to Gemini and asked the following: 
+
+```markdown
+I have a blogpost (see attached .md) about SOS feasibility problems using 4 different formulations: Kernel-Primal, Kernel-Dual, Image-Primal, Image-Dual. Now I would like to  extend this to the minimization setup where we want to solve:
+max gamma s.t. p(x) - gamma = v(x)'Xv(x0, X>=0. For univariate polynomials, this will always provide the solution to the problem min p(x). For multivariate polynomials it will at least provide a lower bound.
+
+Can you create a new blog post, following closely the structure of the original blog post, where you treat this variation of the problem? In particular, I want to see a table with the 4 problem formulations and one section for each. Also, I want you to create python notebook that implements this variation.
+
+**As always, follow these instructions when writing Markdown code for my Jekyll blog:**
+
+- inline math should be surrounded by $. Avoid using symbols like γ and use $\gamma$ instead.
+- full equations should be marked by $$, using a space before and after for correct formatting.
+**
+```
+After only 30.6 seconds of thinking, it output a blogpost and a runnable jupyter notebook. The only edits I had to do were: 
+
+- Fix some notation from symbols to LaTeX math. I added a little general instruction in the prompt for future use. 
+-  
+
 
 ## Conclusion
 
