Added more comments about generation of post two

--- a/_posts/2025-08-18-blog-posts-in-2025.md
+++ b/_posts/2025-08-18-blog-posts-in-2025.md
@@ -114,12 +114,13 @@ Can you create a new blog post, following closely the structure of the original 
 After only 30.6 seconds of thinking, it output a blogpost and a runnable jupyter notebook. The only edits I had to do were: 
 
 - Fix some notation from symbols to LaTeX math. I added a little general instruction in the prompt for future use. 
--  
+- Shorten text. To my taste Gemini is a bit too verbose, so I shortened the output significantly. 
+- Analyze results. The generated jupyter notebook was great, but the analysis of the results was not saying anything interesting. Also, Gemini did a clumsy choice of polynomial: one that has two global minima. I kept this for its educational value, but also added a slight perturbation of the problem that has only one global minimum. So I made these small changes, but this took less than 15 minutes. 
 
 
 ## Conclusion
 
-After almost a full day of work (I started this at ca. 11:30, I am done now and it is 19:00), I have
+The conclusion after writing blogpost number one was: After almost a full day of work (I started this at ca. 11:30, I am done now and it is 19:00), I have
 
 - Two blog posts
 - A proof-of-concept jupyter notebook
@@ -128,3 +129,5 @@ After almost a full day of work (I started this at ca. 11:30, I am done now and 
   - My blog setup with bibliography automatically exported from Zotoro.
 
 I wish I knew how much time I actually saved by using Gemini, and if I would have found my mistake more easily had I not been in "LLM" mode with my brain. But it for sure felt like a pleasant and productive day, and I did learn a ton, not only about optimization but also about interacting with Gemini.
+
+The conclusion after writing blogpost number two is: for evolutions of the original blogpost and notebook, Gemini definitely saved me so much time. The reason is that most of the thinking and reiterating was already done with the first blogpost, and that blogpost was super useful to provide context to the second blogpost. 
