Fix typos, remove Warning

--- a/_posts/2025-08-18-blog-posts-in-2025.md
+++ b/_posts/2025-08-18-blog-posts-in-2025.md
@@ -108,7 +108,7 @@ Can you create a new blog post, following closely the structure of the original 
 **As always, follow these instructions when writing Markdown code for my Jekyll blog:**
 
 - inline math should be surrounded by $. Avoid using symbols like γ and use $\gamma$ instead.
-- full equations should be marked by $$, using a space before and after for correct formatting.
+- full equations should be marked by $$, using an empty line before and after for correct formatting.
 **
 ```
 After only 30.6 seconds of thinking, it output a blogpost and a runnable jupyter notebook. The only edits I had to do were: 
