Improve post and add references in others

--- a/_posts/2025-08-18-blog-posts-in-2025.md
+++ b/_posts/2025-08-18-blog-posts-in-2025.md
@@ -131,3 +131,19 @@ The conclusion after writing blogpost number one was: After almost a full day of
 I wish I knew how much time I actually saved by using Gemini, and if I would have found my mistake more easily had I not been in "LLM" mode with my brain. But it for sure felt like a pleasant and productive day, and I did learn a ton, not only about optimization but also about interacting with Gemini.
 
 The conclusion after writing blogpost number two is: for evolutions of the original blogpost and notebook, Gemini definitely saved me so much time. The reason is that most of the thinking and reiterating was already done with the first blogpost, and that blogpost was super useful to provide context to the second blogpost. 
+
+## Addendum: Using LLM as a reviewer
+
+In some follow-up blogposts, such as [this one](/research/2025/10/27/subspaces.html), I did not use the same pipeline but used LLMs mostly to type up my (this time, more complete) handwritten notes. However, I found it super useful to use the following prompt, which I also added to my "library of prompts" to review the post before publishing it. As attachment I simply uploaded my finalized post. 
+
+```
+I have written a blog post; see the attachment. Please provide a critique of this blog post, structured as follows:
+1. General comments
+–  Is this blog post standalone understandable by a non-expert? My target audience is graduate students and beyond with good literacy in linear algebra and optimization. If not, suggest a few concrete, concise additions that would make the blog post more understandable, in Jekyll Markdown format. 
+2. List of typos 
+– Provide a concise list of obvious typos and English mistakes
+3. English improvements
+– Suggest any edits in terms of language, keeping the same tone as the original blog post, but making it easier to read. 
+```
+
+I didn't integrate most of what was suggested under point 3, since I found it unnecessary (maybe this is due to my own ignorance, but I prefer to keep my tone unless I am convinced the proposed solution is better). But under points 1 and 2 it suggested valuable additions and spotted non-trivial mistakes! 
