Update subspace post

--- a/_data/blogposts-export.bib
+++ b/_data/blogposts-export.bib
@@ -2,7 +2,7 @@
   title = {Toward {{Globally Optimal State Estimation Using Automatically Tightened Semidefinite Relaxations}}},
   shorttitle = {T-{{RO}}},
   author = {D{\"u}mbgen, Frederike and Holmes, Connor and Agro, Ben and Barfoot, Timothy D.},
-  year = {2024},
+  year = 2024,
   journal = {IEEE Transactions on Robotics},
   volume = {40},
   pages = {4338--4358},
@@ -12,10 +12,19 @@
 @article{parrilo_semidefinite_2003,
   title = {Semidefinite Programming Relaxations for Semialgebraic Problems},
   author = {Parrilo, Pablo A.},
-  year = {2003},
+  year = 2003,
   journal = {Mathematical Programming},
   volume = {96},
   number = {2},
   pages = {293--320},
   note = {\url{http://link.springer.com/10.1007/s10107-003-0387-5}}
+}
+
+@article{rudi_finding_2024,
+  title = {Finding Global Minima via Kernel Approximations},
+  shorttitle = {Math. {{Prog}}.},
+  author = {Rudi, Alessandro and {Marteau-Ferey}, Ulysse and Bach, Francis},
+  year = 2024,
+  journal = {Mathematical Programming},
+  note = {\url{https://link.springer.com/10.1007/s10107-024-02081-4}}
 }
